Updates to logos and viewport font sizes. Need correction with CSI logo.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 <body>
     <section id="title">
         <div class="container headline">
-            <img class="CSI logo" src="assets/csi logo.png">
+            <img class="CSI logo" src="assets/csi logo 2.png">
 
             <h1 class="heading">IEM CSE-CSI Student Chapter</h1>
             <img class="IEM logo" src="assets/iem logo.png">
         </div>
     </section>
-    <nav class="navbar container-fluid navbar-expand-lg navbar-dark">
-        <img class="IEM_CSI logo navbar-brand" src="assets/csi logo.png"><!--replace with csi-iem logo--> 
+    <div class="container-fluid navbar">
+    <nav class="navbar container navbar-expand-lg navbar-dark">
+        <img class="IEM_CSI logo navbar-brand" src="assets/csi logo 2.png"><!--replace with csi-iem logo--> 
          <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="toggler-icon top-bar"></span>
           <span class="toggler-icon middle-bar"></span>
@@ -48,6 +49,7 @@
           </ul>
         </div>
     </nav>  
+  </div>
     <section id="events">
     <div class="container iem-csi">
         <div class="row">
@@ -56,12 +58,16 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active"><!--Add event images and subsequent item classes-->
                         
-                        <img src="assets/iem logo.png" alt="" class="" style="display:block"><!--example-->
+                        <img src="https://images.unsplash.com/photo-1667248659708-65c5f37a0605?ixlib=rb-4.0.3&ixid
+                        =MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDEwfGJvOGpRS1RhRTBZfHxlbnwwfHx8fA%3D%3D&
+                        auto=format&fit=crop&w=500&q=60" alt="" class="" style="display:block"><!--example-->
                           
                       </div>
                       <div class="carousel-item">
 
-                        <img src="assets/iem logo.png" alt="" class="" style="display:block">
+                        <img src="https://images.unsplash.com/photo-1671363332482-d3d2e53808d9?ixlib=rb-4.0.3
+                        &ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDJ8Ym84alFLVGFFMFl8fGVufDB8fHx8&
+                        auto=format&fit=crop&w=500&q=60" alt="" class="" style="display:block">
                         </div>
                     </div>
 
